--- a/sprint3sesiones/www/mysite/login.html
+++ b/sprint3sesiones/www/mysite/login.html
@@ -1,4 +1,4 @@
-<form action="login.php" method="post">
+<form id="loginForm" action="login.php" method="post">
     <label for="email">Correo electrónico:</label><br>
     <input type="email" id="email" name="email" required><br><br>
 
@@ -7,3 +7,14 @@
 
     <button type="submit">Iniciar sesión</button>
 </form>
+<script>
+    document.getElementById("loginForm").addEventListener("submit", function(event) {
+    	const email = document.getElementById("email").value.trim();
+    	const password = document.getElementById("password").value.trim();
+
+    	if (email === "" || password === "") {
+        	alert("Por favor, completa todos los campos antes de iniciar sesión.");
+                event.preventDefault();
+     	}
+    });
+</script>
